src/test/deca/context/invalid/created/return/return_bool_int.deca
// Description :
//    return mauvais type : float, demandé int
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: ?? 

class A{
boolean met(){
return 1;
}
}